--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "csvtojson": "^2.0.8",
     "json2csv": "^4.2.1",
     "node-github-graphql": "^0.2.7"
+  },
+  "devDependencies": {
+    "github-label-sync": "^1.3.0"
   }
 }
